apps/homelab/drone-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: drone
