apps/homelab/dashy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dashy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dashy
  labels:
    app: dashy
  name: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
        - image: lissy93/dashy:latest
          name: dashy
          ports:
            - containerPort: 8080
              hostPort: 8080
              name: http
          volumeMounts:
            - name: dashy-item-icons
              mountPath: "/app/public/item-icons"
            - name: config-volume
              mountPath: /app/user-data/
      volumes:
        - name: dashy-item-icons
          persistentVolumeClaim:
            claimName: dashy-item-icons
        - name: config-volume
          configMap:
            name: dashboard-config
          
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
  labels:
    app: dashy
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: dashy
