apps/homelab/haproxy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy
---

apiVersion: v1
kind: Service
metadata:
  name: haproxy
  namespace: haproxy
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8404
      targetPort: 8404
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  namespace: haproxy
  # by convention, use the name of the Service
  # as a prefix for the name of the EndpointSlice
  name: haproxy-1
  labels:
    kubernetes.io/service-name: haproxy
addressType: IPv4
ports:
  - name: http 
    appProtocol: http
    protocol: TCP
    port: 8404
endpoints:
  - addresses:
      - "192.168.4.144"
