apps/homelab/uptime-kuma.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
  name: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - image: louislam/uptime-kuma:1
          name: uptime-kuma
          ports:
            - containerPort: 3001
              name: http
          volumeMounts:
            - mountPath: "/app/data"
              name: uptime-kuma-app-data
      volumes:
        - name: uptime-kuma-app-data
          persistentVolumeClaim:
            claimName: uptime-kuma-app-data
          
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  ports:
    - port: 3001
      protocol: TCP
  selector:
    app: uptime-kuma
